<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pleiade.android.activities.LoginActivity"
    android:background="@color/lighter">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/gold_header">
    </LinearLayout>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/max_logo_white"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/white_card"
        android:orientation="vertical"
        android:paddingHorizontal="25sp"
        android:paddingVertical="40dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/golder"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:text="@string/connexion"/>
        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="12sp"
            android:textColor="@color/dark"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/login"
            android:textColor="@color/darker"
            android:textSize="18sp"
            android:autofillHints="login"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="12sp"
            android:textColor="@color/dark"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:contentDescription="@string/password"
            android:textColor="@color/darker"
            android:textSize="18sp"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="10sp"
            android:textColor="@color/dark"
            android:layout_marginEnd="4dp"
            tools:ignore="SmallSp" />
        <Button
            android:layout_width="match_parent"
            android:layout_marginHorizontal="35dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/gold_button"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_signin"
            android:textSize="12sp"
            android:textColor="@color/darker"
            android:textAlignment="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
