<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="2dp"
    android:paddingEnd="2dp"
    android:background="@color/gold"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width = "35dp"
        android:layout_height = "match_parent">
        <ImageView
            android:paddingTop="2dp"
            android:layout_width = "wrap_content"
            android:layout_height = "38dp"
            android:src = "@drawable/menu_icon"
            android:contentDescription="@string/menu" />
    </LinearLayout>
    <LinearLayout
        android:layout_width = "150dp"
        android:layout_height = "match_parent">
        <ImageView
            android:paddingTop="5dp"
            android:layout_width = "wrap_content"
            android:layout_height = "38dp"
            android:src = "@drawable/max_logo_white"
            android:contentDescription="@string/app_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layoutDirection="rtl"
        android:layout_weight="1">
        <ImageView
            android:paddingTop="5dp"
            android:layout_width = "35dp"
            android:layout_height = "38dp"
            android:src = "@drawable/search_icon"
            android:contentDescription="@string/rechercher" />
    </LinearLayout>
</LinearLayout>